--- a/client/src/app/games/rating/rating.component.css
+++ b/client/src/app/games/rating/rating.component.css
@@ -13,7 +13,7 @@
     border-width: 3px;
     width: 80%;
     margin: auto;
-    margin-top: 15px;
+    /* margin-top: 15px; */
 }
 
 .exit {
@@ -44,4 +44,8 @@
     margin-right: 1vw;
     border: 3px solid red;
     border-radius: 7.5px;
+}
+
+.section {
+    margin-top: 15px;
 }
