--- a/client/src/app/games/game3/game3.component.html
+++ b/client/src/app/games/game3/game3.component.html
@@ -3,17 +3,17 @@
     <div class="pNotAdmin" appEasyLang>Вам надо будет решать примеры. В каких пределах вы хотите считать?</div>
     <ul class="time-list" id="time-list">
         <li>
-          <button class="time-btn green-cursor" (click)="start(10)">
+          <button class="time-btn green-cursor" (click)="start(10, 'до 10')">
             до 10
           </button>
         </li>
         <li>
-          <button class="time-btn green-cursor" (click)="start(100)">
+          <button class="time-btn green-cursor" (click)="start(100, 'до 100')">
             до 100
           </button>
         </li>
         <li>
-          <button class="time-btn green-cursor" (click)="start(1000)">
+          <button class="time-btn green-cursor" (click)="start(1000, 'до 1000')">
             до 1000
           </button>
         </li>
