--- a/client/src/app/games/game1/game1.component.html
+++ b/client/src/app/games/game1/game1.component.html
@@ -3,17 +3,22 @@
     <div class="pNotAdmin" appEasyLang>Вам надо будет печатать надписи, как они напечатаны на пиктограммах. Сколько карточек вы хотите?</div>
     <ul class="time-list" id="time-list">
         <li>
-          <button class="time-btn green-cursor" (click)="start(1)">
+          <button class="time-btn green-cursor" (click)="start(1, '1 карточка')">
             1 карточка
           </button>
         </li>
         <li>
-          <button class="time-btn green-cursor" (click)="start(5)">
+          <button class="time-btn green-cursor" (click)="start(3, '3 карточки')">
+            3 карточки
+          </button>
+        </li>
+        <li>
+          <button class="time-btn green-cursor" (click)="start(5, '5 карточек')">
             5 карточек
           </button>
         </li>
         <li>
-          <button class="time-btn green-cursor" (click)="start(10)">
+          <button class="time-btn green-cursor" (click)="start(10, '10 карточек')">
             10 карточек
           </button>
         </li>
